# LibreHomework

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  checker.py  db.py  main.py  requirements.txt  signup.py  utils.py
app/: .gitignore  package-lock.json  package.json  rollup.config.js
app/public/: global.css  index.html  splashscreen.html
app/src/: App.svelte  Dialog.svelte  configmanager.js  locales.json  main.js  network.js  screenlock.js  subjects.js  taskmanager.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: db.rs  documents.rs  errors.rs  exams.rs  main.rs  mod.rs  models.rs  network.rs  notify.rs  tasks.rs  utils.rs
daemon/: Cargo.toml
daemon/src/: config.rs  db.rs  main.rs  notify.rs
scripts/: install.sh  uninstall.sh
server/: authtoken.py  checker.py  db.py  main.py  ratelimiter.py  utils.py
