[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log-panics = "2.0.0"
env_logger = "0.7"
rusqlite = "0.26.1"
notify-rust = "4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs-next = "2.0.0"