[package]
name = "LibreHomework-App"
version = "0.1.0"
description = "Tools for the student"
authors = ["hgepro"]
license = "GPL-3.0"
repository = "https://github.com/HGEpro/LibreHomework"
default-run = "LibreHomework-App"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc", features = [] }

[dependencies]
tauri = { version = "1.0.0-rc", features = ["fs-all", "window-all"] }
rusqlite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
